[workspace]
[package]
version = "0.1.0"
name = "merkle-tree-program"
edition = "2021"

[dependencies]
alloy-merkle-tree = { git = "https://github.com/rkdud007/alloy-merkle-tree.git", branch = "main" }
alloy-primitives = "0.8.19"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
